--- a/pom.xml
+++ b/pom.xml
@@ -20,28 +20,14 @@
     <repository>
       <id>evinced-repository</id>
       <name>Evinced Jfrog Repo</name>
-      <url>https://evinced.jfrog.io/artifactory/public-gradle/com/evinced/appium-sdk/</url>
+      <url>https://evinced.jfrog.io/artifactory/public-gradle-local</url>
     </repository>       
 
     <repository>
         <id>jitpack.io</id>
         <url>https://jitpack.io</url>
     </repository>
-
   </repositories>
-
-  <dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.junit</groupId>
-				<artifactId>junit-bom</artifactId>
-				<version>5.10.2</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-
 
   <dependencies>
     <dependency>
@@ -60,13 +46,7 @@
     <dependency>
       <groupId>com.evinced</groupId>
       <artifactId>appium-sdk</artifactId>
-      <version>1.20.0</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
+      <version>1.20.0_java_client_8</version>
       <scope>test</scope>
     </dependency>
 
